# ai-prep

./: .gitignore  Makefile  README.md  mcp_server.py  pyproject.toml  requirements.txt
app/: core.py  main.py  tools.py
data/: sample.csv
ml/: register_model.py  train_catboost.py
rag/: build_index.py  build_index_from_csv.py  query.py
